[package]
name = "octocrab-rate-limiter"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

license = "BSD-3-Clause"
description = "Rate limiter for octocrab"
documentation = "https://docs.rs/octocrab-rate-limiter"
readme = "README.md"
repository = "https://github.com/illicitonion/octocrab-rate-limiter"

[dependencies]
http = "1.3.1"
moka = { version = "0.12.10", features = ["future"] }
octocrab = "0.44.1"
tokio = { version = "1.46.1", features = ["sync"] }
tower = "0.5.2"
