[package]
name = "octocrab-rate-limiter"
version = "0.1.1"
edition = "2024"
rust-version = "1.85.0"
license = "BSD-3-Clause"
description = "Rate limiter for octocrab"

[dependencies]
http = "1.3.1"
moka = { version = "0.12.10", features = ["future"] }
tokio = { version = "1.46.1", features = ["sync"] }
tower = "0.5.2"
